--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+    {{ encore_entry_link_tags('app') }}
+</head>
+<body>
+<div class="d-flex vh-100">
+    <header class="col-2 pl-0">
+        {% include '_components/navbar.html.twig' %}
+    </header>
+    <main class="col-10">
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+    </main>
+</div>
+{% block javascripts %}{% endblock %}
+{{ encore_entry_script_tags('app') }}
+</body>
 </html>
