--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,9 @@
     {{ encore_entry_link_tags('app') }}
 </head>
 <body>
-<div class="d-flex vh-100">
+<div class="navbar-nav">
     <header class="col-2 pl-0">
-        {% include '_components/navbar.html.twig' %}
+        {% include 'components/_navbar.html.twig' %}
     </header>
     <main class="col-10">
         {% block body %}{% endblock %}
