--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">WAV FACTORY</a>
+        <a class="navbar-brand js-scroll-trigger" href="{{ path('wav_index') }}"> <img src="{{ asset('build/images/logobleutxt.png') }}" width="120px" class="portrait-nav" alt="logo"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">La WAV</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Instrumentals</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Titres en ligne</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('instru_show') }}">Instrumentals</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Production</a></li>
             </ul>
         </div>
     </div>
