--- a/templates/wav/index.html.twig
+++ b/templates/wav/index.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %} Acceuil {% endblock %}
 {% block body %}
-
+    <div class="container-fluid d-flex">
+<div class="col-6">
+    <img src="{{ asset('build/images/redfactory.jpg') }}" width="100%">
+</div>
+    </div>
+        <div class="col-6">
+            <h1 class="text-primary">HOLA</h1>
+        </div>
 {% endblock %}
