Add Crud & Production Page

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">La WAV</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('instru_show') }}">Instrumentals</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Production</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('instru_list') }}">Instrumentals</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('online_list') }}">Production</a></li>
             </ul>
         </div>
     </div>
