--- a/templates/instrumental/instrumentals.html.twig
+++ b/templates/instrumental/instrumentals.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %} Nos Instrus {% endblock %}
 {% block body %}
-    <div class="container">
+    <div class="container d-flex">
             <h1 class="pt-3 ml-5">Instrumentals</h1>
             <div>
                 {% for instru in instrus %}
