Add css & fix bugs

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,3 +1,6 @@
+@import "assets/scss/_components/navbar.scss";
+@import "~bootstrap/scss/bootstrap";
+
 $theme-colors: (
         "primary": #1C013B,
         "secondary": #FE3E57,
@@ -10,7 +13,8 @@ $theme-colors: (
 html{
     height: 100%;
 }
-
+.mainsize {
+    margin-top: 80px;
+}
 // the ~ allows you to reference things in node_modules
-@import "assets/scss/_components/navbar.scss";
-@import "~bootstrap/scss/bootstrap";
+
