--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,11 +8,11 @@
 </head>
 <body>
 <header class="col-2 pl-0">
-<div class="navbar-nav">
+
         {% include 'components/_navbar.html.twig' %}
-</div>
+
     </header>
-    <main class="col-10">
+    <main class="col-10 mainsize">
         {% block body %}{% endblock %}
     </main>
 {% block javascripts %}{% endblock %}
