--- a/templates/online/list.html.twig
+++ b/templates/online/list.html.twig
@@ -2,11 +2,14 @@
 {% block title %} Nos Productions {% endblock %}
 {% block body %}
     <div class="container d-flex">
-        <h1 class="pt-3 ml-5">Productions: </h1>
+        <h1 class="pt-3 ml-5 m-3">Productions: </h1>
         <div>
             {% for titre in titres %}
                 <div class="d-flex mt-3 mb-3">
                     <iframe width="800" height="600" src="https://open.spotify.com/track/{{ titre.link }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="d-flex m-5 justify-content-center">
+                    <img src="{{ asset('build/images/' ~ random(pixs)) }}" width="500" height="400">
                 </div>
             {% else %}
                 Aucune production trouvée.
