--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
         {% include 'components/_navbar.html.twig' %}
 
     </header>
-    <main class="col-10 mainsize">
+    <main class="mx-auto mainsize">
         {% block body %}{% endblock %}
     </main>
 {% block javascripts %}{% endblock %}
