--- a/templates/wav/index.html.twig
+++ b/templates/wav/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container-fluid d-flex">
 <div class="col-6">
-    <img src="{{ asset('build/images/redfactory.jpg') }}" width="100%">
+    <img src="{{ asset('build/images/whitefactory.jpg') }}" width="100%">
 </div>
     </div>
         <div class="col-6">
