--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,15 +1,20 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="{{ path('wav_index') }}"> <img src="{{ asset('build/images/logobleutxt.png') }}" width="120px" class="portrait-nav" alt="logo"></a>
+        <a class="navbar-brand js-scroll-trigger" href="{{ path('member_list') }}"> <img src="{{ asset('build/images/logobleutxt.png') }}" width="120px" class="portrait-nav" alt="logo"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">La WAV</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('instru_list') }}">Instrumentals</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('online_list') }}">Production</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger {{ '/' == app.request.pathinfo or 'member' in app.request.pathinfo ? 'text-secondary' : '' }}" href="{{ path('member_list') }}">La WAV</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger {{ 'instrumental' in app.request.pathinfo ? 'text-secondary' : '' }}" href="{{ path('instru_list') }}">Instrumentals</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger {{ 'online' in app.request.pathinfo ? 'text-secondary' : '' }}" href="{{ path('online_list') }}">Production</a></li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger {{ 'admin' in app.request.pathinfo ? 'text-secondary' : '' }}" href="{{ path('admin_dash') }}">Administration</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{{ path('app_logout') }}">Logout</a></li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
