--- a/templates/instrumental/edit.html.twig
+++ b/templates/instrumental/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}Edit Instrumental{% endblock %}
+{% block title %}Editer une Instrumentale{% endblock %}
 
 {% block body %}
-    <h1>Edit Instrumental</h1>
+    <h1>Editer l'Instrumental</h1>
 
     {{ include('instrumental/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('instrumental_index') }}">back to list</a>
+    <a href="{{ path('instrumental_index') }}">Retour à la liste</a>
 
     {{ include('instrumental/_delete_form.html.twig') }}
 {% endblock %}
