--- a/templates/instrumental/new.html.twig
+++ b/templates/instrumental/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
-{% block title %}New Instrumental{% endblock %}
+{% block title %}Ajouter Instrumentale{% endblock %}
 
 {% block body %}
-    <h1>Create new Instrumental</h1>
+    <h1>Ajouter une nouvelle instrumentale</h1>
 
     {{ include('instrumental/_form.html.twig') }}
 
-    <a href="{{ path('instrumental_index') }}">back to list</a>
+    <a href="{{ path('instrumental_index') }}">Retour à la liste</a>
 {% endblock %}
