--- a/templates/online/edit.html.twig
+++ b/templates/online/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}Edit Online{% endblock %}
+{% block title %}Edition de placement{% endblock %}
 
 {% block body %}
-    <h1>Edit Online</h1>
+    <h1>Editer un Placement</h1>
 
     {{ include('online/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('online_index') }}">back to list</a>
+    <a href="{{ path('online_index') }}">Retour à la liste</a>
 
     {{ include('online/_delete_form.html.twig') }}
 {% endblock %}
