--- a/templates/online/list.html.twig
+++ b/templates/online/list.html.twig
@@ -1,19 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block title %} Nos Productions {% endblock %}
 {% block body %}
-    <div class="container d-flex">
-        <h1 class="pt-3 ml-5 m-3">Productions: </h1>
+    <div class="container">
         <div>
             {% for titre in titres %}
-                <div class="d-flex mt-3 mb-3">
-                    <iframe width="800" height="600" src="https://open.spotify.com/track/{{ titre.link }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="col-12 d-flex {{ loop.index %2 == 0 ? 'flex-row-reverse' : '' }} justify-content-center">
+                <div class="col-6 m-5">
+                    <iframe width="100%" height="600" src="https://open.spotify.com/track/{{ titre.link }}"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                 </div>
-                <div class="d-flex m-5 justify-content-center">
+                <div class="col-6 d-flex m-5 justify-content-center align-items-center">
                     <img src="{{ asset('build/images/' ~ random(pixs)) }}" width="500" height="400">
                 </div>
+            </div>
             {% else %}
-                Aucune production trouvée.
-            {% endfor %}
+            Aucune production trouvée.
         </div>
+        {% endfor %}
+    </div>
     </div>
 {% endblock %}
