--- a/templates/online/new.html.twig
+++ b/templates/online/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
-{% block title %}New Online{% endblock %}
+{% block title %}Ajouter Placement{% endblock %}
 
 {% block body %}
-    <h1>Create new Online</h1>
+    <h1>Ajouter un nouveau placement</h1>
 
     {{ include('online/_form.html.twig') }}
 
-    <a href="{{ path('online_index') }}">back to list</a>
+    <a href="{{ path('online_index') }}">Retour à la liste</a>
 {% endblock %}
