--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -14,7 +14,7 @@
                     <a href="{{ path('instrumental_index') }}">
                     <img src="{{ asset('build/images/logobouton.jpg') }}" width="70%">
                     </a>
-                    <h2 class="m-2">Instrumentals</h2>
+                    <h2 class="m-2">Instrumentales</h2>
                 </div>
                 <div class="col-2 mr-5">
                     <a href="{{ path('online_index') }}">
